--- a/gb/1/2/16/n48109.md
+++ b/gb/1/2/16/n48109.md
@@ -4,57 +4,58 @@
 <tr><td VALIGN=TOP width="626"><h2 align=center>陈水扁再提戒急用忍已过时</h2>
 <h6></h6>
 <hr>
-	<p>【大纪元2月16日讯】 陈水扁总统今天中午参加“全球面向系列研讨会”，以“ e 世纪的<ahref=http://www3.epochtimes.com/news/epochnews/main/3.md#1><font color=blue>台湾</font></A>国际新角色”为题发表谈话。陈总统再次提到戒急用忍政策，他表示过去政府采取戒急用忍政策有其特定背景及需要，因应两岸入会新情势，将以“积极开放、有效管理”的新视野，为经贸版图作宏观规划。 <br />联合晚报报导，陈水扁表示，亚洲产业正面临一项严肃考验，如何在知识经济时代里适应快速变化的网路通讯需求，同时在既有规范内释放自由，发挥创意与发明的力量。 <br />陈总统说，过去台湾本着优秀的技术品质与灵活弹性企业经营手法，在国际经济舞台上斩露头角，在新的数位时代，台湾正面临<ahref=http://www3.epochtimes.com/news/epochnews/main/6.md#1><font color=blue>科技</font></A>进步冲击，如何保持创新与敏锐是决定台湾未来是否能够继续在世界经济社会中保持竞争力的重要关键。 <br />他指出，台湾与<ahref=http://www3.epochtimes.com/news/epochnews/main/2.md#1><font color=blue>中国</font></A>同时加入世界贸易组织后，低关税与资本的自由流通势必冲击台湾现有的经济秩序，更重要的是台湾的国家安全将因此受到影响。 <br />陈总统表示，过去政府采取“戒急用忍”政策有其特定背景及需要，因应两岸入会后新情势，台湾将以“积极开放、有效管理”的新视野，为台湾新世纪经贸版图预作宏观规划，逐步落实。未来，身为一个主权独立国家的领导人，他个人有义务、也有责任拓展台湾国际空间，提升台湾国际地位。 </p>
+	<p>【大纪元2月16日讯】 陈水扁总统今天中午参加“全球面向系列研讨会”，以“ e 世纪的<font color="blue">台湾</font>国际新角色”为题发表谈话。陈总统再次提到戒急用忍政策，他表示过去政府采取戒急用忍政策有其特定背景及需要，因应两岸入会新情势，将以“积极开放、有效管理”的新视野，为经贸版图作宏观规划。 <br />联合晚报报导，陈水扁表示，亚洲产业正面临一项严肃考验，如何在知识经济时代里适应快速变化的网路通讯需求，同时在既有规范内释放自由，发挥创意与发明的力量。 <br />陈总统说，过去台湾本着优秀的技术品质与灵活弹性企业经营手法，在国际经济舞台上斩露头角，在新的数位时代，台湾正面临<font color="blue">科技</font>进步冲击，如何保持创新与敏锐是决定台湾未来是否能够继续在世界经济社会中保持竞争力的重要关键。 <br />他指出，台湾与<font color="blue">中国</font>同时加入世界贸易组织后，低关税与资本的自由流通势必冲击台湾现有的经济秩序，更重要的是台湾的国家安全将因此受到影响。 <br />陈总统表示，过去政府采取“戒急用忍”政策有其特定背景及需要，因应两岸入会后新情势，台湾将以“积极开放、有效管理”的新视野，为台湾新世纪经贸版图预作宏观规划，逐步落实。未来，身为一个主权独立国家的领导人，他个人有义务、也有责任拓展台湾国际空间，提升台湾国际地位。 </p>
 <p>华盛顿时报十五日引述美国国防及情报官员的消息指出，俄罗斯军方正在进行大规模的传统与战略部队联合作战演习，未来数天内还计划试射三枚长程飞弹。 <br />俄国这项战略陆海空三军联合演习从本月十二日正式展开，演习科目包括由俄国战略轰炸机进入日本领空及接近挪威领空。东京当局已针对俄机侵入领空的不友善行为向莫斯科当局提出抗议。 <br />俄国前几次类似演习也导致俄国和美国及其他北大西洋公约组织（NATO）成员国的摩擦。美国官员表示，他们认为俄国此次长达一周的演习势必引发类似的冲突。 <br />这位官员说：“他们正在举行战略作战演习，规模之大为近年来仅见。”不过，从俄国的演习架构可以看出，他们似乎有意避免刺激西方国家。 <br />一位情报官员说，俄国事前曾透过新设立的美俄飞弹警告中心，将试射一枚陆上机动洲际弹道飞弹及两枚潜射弹道飞弹的计划知会美国。此一警告中心设立的目的在避免重蹈数年前俄国将挪威发射的科学实验火箭误判为美国潜舰发射的飞弹，命核武部队警戒待命的危险情况。 <br />俄国此次演习的重点，在进行射程达一万三千多公里的陆上SS-25机动洲际飞弹试射。 <br />美国官员说，俄国飞弹潜舰亦将在此次演习中试射三个弹头的SSN-18及四个弹头的SSN-23飞弹。这两款飞弹射程均可达八千公里。 <br />俄国伊留申七八型加油机也被派至俄罗斯边缘地区执勤，有人目睹加油机在空中为俄国战机加油。 <br />分析家认为，俄国此次演习时机不无向美国布希新政府及其布建全国飞弹防御系统之计划施加政治压力的用意。美国前中央情报局局长及限武谈判代表吴尔西说： <br />“这些演习显然是俄国决定师法前苏联于一九八０年代初期惯用的恫吓手段，目的在遏阻美国部署飞弹防御系统。” </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<B><FONTCOLOR=red>相关文章</FONT></B><br /> &nbsp;&nbsp;&nbsp;&nbsp; </p>
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48095 target=_blank class=ltnn>陈总统：中程协议可建立两岸谅解机制</a> (2/16/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47889 target=_blank class=ltnn>今年大三通有望</a> (2/15/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47863 target=_blank class=ltnn>港报：今年七件大事影响两岸关系 </a> (2/15/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47743 target=_blank class=ltnn>马友友音乐会三月周旋两岸</a> (2/15/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47697 target=_blank class=ltnn>北京拉拢马英九? 蔡英文不认同</a> (2/15/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47690 target=_blank class=ltnn>陈总统: 中国避免和台新政府接触-不智</a> (2/15/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47677 target=_blank class=ltnn>台学者呼吁: 尽快开放大三通</a> (2/15/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47660 target=_blank class=ltnn>陈水扁：我律师性格 能解两岸问题</a> (2/15/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47578 target=_blank class=ltnn>马英九回台即会蔡英文说明访港情形 </a> (2/15/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47577 target=_blank class=ltnn>陈水扁：两岸不能解决责任在对方 </a> (2/15/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47500 target=_blank class=ltnn>马英九离港前呼吁两岸及香港增进互信协商</a> (2/14/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47486 target=_blank class=ltnn>马英九：在台海两岸关系上不能诉诸武力 </a> (2/14/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47274 target=_blank class=ltnn>马英九: 要为两岸关系打前锋 是“爱台”不是“卖台” </a> (2/14/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47237 target=_blank class=ltnn>纽约时报：中共藉马英九访港打击陈水扁</a> (2/14/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47207 target=_blank class=ltnn>马英九访港如是闻:默许打头阵 甘愿当棋子 </a> (2/14/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47198 target=_blank class=ltnn>陈总统期许政党和解合作</a> (2/14/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47169 target=_blank class=ltnn>纽约时报：马英九极可能是台湾未来的总统</a> (2/14/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=46991 target=_blank class=ltnn>陈劲松：两岸关系：中国人智慧不如朝鲜人</a> (2/13/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=46830 target=_blank class=ltnn>两岸军力平衡可防爆发战争</a> (2/13/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=46763 target=_blank class=ltnn>马英九在港大受欢迎</a> (2/13/2001)<br />
+</p>
+<p>????<b><font color="red">相关文章</font></b><br /> ???? </p>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48095" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">陈总统：中程协议可建立两岸谅解机制</a> (2/16/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47889" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">今年大三通有望</a> (2/15/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47863" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">港报：今年七件大事影响两岸关系 </a> (2/15/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47743" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">马友友音乐会三月周旋两岸</a> (2/15/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47697" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">北京拉拢马英九? 蔡英文不认同</a> (2/15/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47690" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">陈总统: 中国避免和台新政府接触-不智</a> (2/15/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47677" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台学者呼吁: 尽快开放大三通</a> (2/15/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47660" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">陈水扁：我律师性格 能解两岸问题</a> (2/15/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47578" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">马英九回台即会蔡英文说明访港情形 </a> (2/15/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47577" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">陈水扁：两岸不能解决责任在对方 </a> (2/15/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47500" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">马英九离港前呼吁两岸及香港增进互信协商</a> (2/14/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47486" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">马英九：在台海两岸关系上不能诉诸武力 </a> (2/14/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47274" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">马英九: 要为两岸关系打前锋 是“爱台”不是“卖台” </a> (2/14/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47237" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">纽约时报：中共藉马英九访港打击陈水扁</a> (2/14/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47207" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">马英九访港如是闻:默许打头阵 甘愿当棋子 </a> (2/14/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47198" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">陈总统期许政党和解合作</a> (2/14/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47169" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">纽约时报：马英九极可能是台湾未来的总统</a> (2/14/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=46991" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">陈劲松：两岸关系：中国人智慧不如朝鲜人</a> (2/13/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=46830" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">两岸军力平衡可防爆发战争</a> (2/13/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=46763" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">马英九在港大受欢迎</a> (2/13/2001)</li>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/13/n46830.md#1">两岸军力平衡可防爆发战争</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/13/n46991.md#1">陈劲松：两岸关系：中国人智慧不如朝鲜人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/14/n47169.md#1">纽约时报：马英九极可能是台湾未来的总统</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/14/n47237.md#1">纽约时报：中共藉马英九访港打击陈水扁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/6/n10619679.md#1" target="_blank">林辉：教授从练习低头弯腰到乐极生悲</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/25/n11546426.md#1" target="_blank">中共强摘器官证据呈递联合国 媒体聚焦</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10899776.md#1" target="_blank">林辉：姚依林回忆“一二九运动”证实三件事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/9/11/n2259267.md#1" target="_blank">法轮功简介</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520972.md#1">【古道人生】好心帮人为何死后遭“雷劈”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536779.md#1">夜奔七百里闯敌营 看奇女子如何报恩还业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549334.md#1">【时事金扫描】乌克兰抓获中共父子间谍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548988.md#1">【直播】NASA新闻发布会：SpaceX Crew-11任务</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548923.md#1">【佳音时刻】川普警告习：敢动台湾必毁北京</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547473.md#1">神韵要求法庭撤销“毫无根据”的诉讼案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547530.md#1">资不抵债 大陆合资企业广汽菲克宣告破产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547402.md#1">“0元购”外卖爆单 阿里与美团顶风内卷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14546820.md#1">陆剧上半年十大最具影响力角色出炉 孙俪称冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547512.md#1">汤唯携9岁女儿现身机场 请求网友别拍到小孩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548151.md#1">获奖无数为何不想拿这奖 周润发设80岁前目标</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546802.md#1">女粉丝带男友看演唱会 鹿晗温暖喊话现场嗨翻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547527.md#1">王嘉尔自曝曾借巨款给好友 再联系方知被骗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547823.md#1">吃西瓜前加上这一物 就不会变得湿软难吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547034.md#1">美国114岁女人瑞分享长寿秘诀：吃一种食物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548571.md#1">很多人的休假方式都错了？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544778.md#1">步行：治疗7种常见病痛的有效方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542664.md#1">心脏与大脑会记下每一个愤怒的时刻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/2/16/n48109.htm">陈水扁再提戒急用忍已过时</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/2/16/n48109.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
